<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layoutDirection="@string/layout_direction"
    android:layout_gravity="center_vertical"
    android:layout_marginEnd="30dp"
    android:layout_marginStart="30dp"
    android:background="@color/white"
    android:orientation="vertical">

    <com.obs.CustomTextView
        style="@style/ClanProForUBER_Medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_normal"
        android:layout_marginStart="@dimen/margin_normal"
        android:paddingBottom="@dimen/margin_lsmall"
        android:paddingTop="@dimen/margin_lsmall"
        android:text="@string/signout_msg"
        android:textColor="@color/textblack"
        android:textSize="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingEnd="@dimen/margin_normal"
        android:paddingStart="@dimen/margin_normal"
        android:showDividers="middle"
        android:weightSum="2">

        <com.obs.CustomTextView
            android:id="@+id/tvcancel"
            style="@style/ClanProForUBER_News"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingBottom="@dimen/margin_lsmall"
            android:paddingTop="@dimen/margin_lsmall"
            android:text="@string/cancel"
            android:textAlignment="center"
            android:textColor="@color/textblack"
            android:textSize="14dp" />

        <com.obs.CustomTextView
            android:id="@+id/tvsignout"
            style="@style/ClanProForUBER_News"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingBottom="@dimen/margin_lsmall"
            android:paddingTop="@dimen/margin_lsmall"
            android:text="@string/signout"
            android:textAlignment="center"
            android:textColor="@color/textblack"
            android:textSize="14dp" />
    </LinearLayout>

</LinearLayout>