<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="@string/layout_direction"
    tools:context="gofereatsrestarant.views.main.DelayOrderActivity">

    <include
        android:id="@+id/header"
        layout="@layout/header" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"

            android:layout_marginTop="50dp">

            <RelativeLayout
                android:id="@+id/rltCancelReason"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_black_outline">

                <Spinner
                    android:id="@+id/spinner"
                    style="@style/ClanProForUBER_Medium"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:paddingBottom="10dp"
                    android:paddingStart="5dp"
                    android:paddingTop="10dp"
                    android:textAlignment="viewStart"
                    android:spinnerMode="dialog" />
            </RelativeLayout>

            <com.obs.CustomEditText
                android:id="@+id/edtDelayReason"
                style="@style/ClanProForUBER_News"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_below="@+id/rltCancelReason"
                android:layout_marginTop="20dp"
                android:background="@drawable/background_black_outline"
                android:gravity="start"
                android:hint="@string/delay_reason"
                android:lines="5"
                android:padding="5dp"
                android:text=""
                android:textAlignment="viewStart"/>

            <com.obs.CustomButton
                android:id="@+id/btnDelay"
                style="@style/ClanProForUBER_Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edtDelayReason"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/background_green"
                android:text="@string/delay_order"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="18dp" />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
