<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="@string/layout_direction"
    android:background="@color/app_back_color"
    tools:context="gofereatsrestarant.views.login.ForgotPassword">

    <include
        android:id="@+id/incForgotHeader"
        layout="@layout/header"
        android:visibility="visible" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/incForgotHeader"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/margin_normal"
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_marginTop="@dimen/margin_normal"
            android:orientation="vertical">

            <com.obs.CustomTextView
                android:id="@+id/tvForgotMsg"
                style="@style/ClanProForUBER_Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="@dimen/margin_normal"
                android:background="?attr/selectableItemBackground"
                android:text="@string/reset_password_msg"
                android:textColor="@color/ub__white"
                android:textSize="@dimen/text_medium" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_small"
                android:layout_marginTop="@dimen/margin_small"
                android:background="@drawable/background_white"
                android:orientation="vertical"
                android:padding="@dimen/margin_small">

                <!--<android.support.design.widget.TextInputLayout
                    android:id="@+id/tilEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true">-->

                <com.obs.CustomEditText
                    android:id="@+id/edtEmail"
                    style="@style/ClanProForUBER_News"
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/height_normal"
                    android:background="@android:color/transparent"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:textColor="@color/app_text_black1"
                    android:textColorHint="@color/app_text_black1"
                    android:textSize="@dimen/text_normal" />
                <!--</android.support.design.widget.TextInputLayout>-->

                <com.obs.CustomTextView
                    android:id="@+id/tvError"
                    style="@style/ClanProForUBER_News"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:background="?attr/selectableItemBackground"
                    android:text=""
                    android:textColor="@color/ub__red"
                    android:textSize="@dimen/text_medium"
                    android:visibility="gone" />
            </LinearLayout>

            <com.obs.CustomButton
                android:id="@+id/btnSubmit"
                style="@style/ClanProForUBER_News"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_normal"
                android:layout_marginBottom="@dimen/margin_normal"
                android:layout_marginTop="@dimen/margin_normal"
                android:background="@drawable/background_green"
                android:clickable="true"
                android:text="@string/submit"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/text_xlarge" />


        </LinearLayout>
    </ScrollView>
</RelativeLayout>
